--- a/contact-3.html
+++ b/contact-3.html
@@ -64,10 +64,10 @@
 
                                     </li>
                                     <li class="menu-item menu-item-has-children">
-                                        <a href="asset-management.html">Services</a>
+                                        <a href="asset-management.html">Our Services</a>
                                         <ul class="sub-menu">
                                             <li class="menu-item"><a href="asset-management.html">Securities Trading</a></li>
-                                            <li class="menu-item"><a href="merge-acquisition.html">Financings &amp; Capital Market</a></li>
+                                            <li class="menu-item"><a href="merge-acquisition.html">Financings &amp; Capital Markets</a></li>
                                             <li class="menu-item"><a href="smart-manufacturing.html">Investment Research</a></li>
                                             <li class="menu-item"><a href="risk-management.html">Investment Advisory</a></li>
                                             <li class="menu-item"><a href="insurance.html">Strategic Advisory</a></li>
@@ -75,15 +75,17 @@
                                         </ul>
                                     </li>
                                     <li class="menu-item menu-item-has-children">
-                                        <a href="blog-full-both-sidebar-with-frame.html">Research</a>
-
+                                        <a href="#">Portals</a>
+                                        <ul class="sub-menu">
+                                            <li class="menu-item"><a href="#">Client Center</a></li>
+                                            <li class="menu-item"><a href="#">Investment Research</a></li>
+                                        </ul>
                                     </li>
+<!--                                    <li class="menu-item menu-item-has-children">-->
+<!--                                        <a href="faq.html">FAQs</a>-->
+<!--                                    </li>-->
                                     <li class="menu-item menu-item-has-children">
-                                        <a href="faq.html">FAQs</a>
-
-                                    </li>
-                                    <li class="menu-item menu-item-has-children">
-                                        <a href="contact-3.html">Support</a>
+                                        <a href="contact-3.html">Contact Us</a>
 
                                     </li>
                                 </ul>
@@ -157,33 +159,35 @@
 
                                             </li>
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="asset-management.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">03</span>Services</a>
+                                                <a href="asset-management.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">03</span>Our Services</a>
                                                 <ul class="sub-menu">
                                                     <li class="menu-item" data-size="60"><a href="asset-management.html">Securities Trading</a></li>
-                                                    <li class="menu-item" data-size="60"><a href="merge-acquisition.html">Financings &amp; Capital Market</a></li>
+                                                    <li class="menu-item" data-size="60"><a href="merge-acquisition.html">Financings &amp; Capital Markets</a></li>
                                                     <li class="menu-item" data-size="60"><a href="risk-management.html">Investment Advisory</a></li>
                                                     <li class="menu-item" data-size="60"><a href="smart-manufacturing.html">Investment Research</a></li>
                                                     <li class="menu-item" data-size="60"><a href="insurance.html">Strategic Advisory</a></li>
                                                     <li class="menu-item" data-size="60"><a href="private-equity-2.html">Private Equity</a></li>
                                                 </ul>
                                             </li>
-                                            <li class="menu-item current-menu-item current_page_item menu-item-has-children corzo-normal-menu">
-                                                <a href="blog-full-both-sidebar-with-frame.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">04</span>Researh</a>
-
-                                            </li>
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="faq.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>FAQs</a>
-
+                                                <a href="#" class="sf-with-ul-pre">
+                                                    <span class="corzo-menu-item-description">04</span>Portals</a>
+                                                <ul class="sub-menu">
+                                                    <li class="menu-item"><a href="#">Client Center</a></li>
+                                                    <li class="menu-item"><a href="#">Investment Research</a></li>
+                                                </ul>
                                             </li>
+<!--                                            <li class="menu-item menu-item-has-children corzo-normal-menu">-->
+<!--                                                <a href="faq.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>FAQs</a>-->
+<!--                                            </li>-->
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="contact-3.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">06</span>Support</a>
-
+                                                <a href="contact-3.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">06</span>Contact Us</a>
                                             </li>
                                         </ul>
                                         <div class="corzo-navigation-slide-bar corzo-navigation-slide-bar-style-dot" data-size-offset="0" id="corzo-navigation-slide-bar"></div>
                                     </div>
                                     <div class="corzo-main-menu-right-wrap clearfix">
-                                        <a class="corzo-main-menu-right-button corzo-button-1 corzo-style-round" href="contact-3.html" target="_self">Get Broker</a>
+                                        <a class="corzo-main-menu-right-button corzo-button-1 corzo-style-round" href="contact-3.html" target="_self">Consult</a>
                                     </div>
                                 </div>
                                 <!-- corzo-navigation -->
