--- a/merge-acquisition.html
+++ b/merge-acquisition.html
@@ -83,12 +83,12 @@
                                         </ul>
                                     </li>
 
-                                    <li class="menu-item menu-item-has-children">
-                                        <a href="faq.html">FAQs</a>
+<!--                                    <li class="menu-item menu-item-has-children">-->
+<!--                                        <a href="faq.html">FAQs</a>-->
 
-                                    </li>
+<!--                                    </li>-->
                                     <li class="menu-item menu-item-has-children">
-                                        <a href="contact-3.html">Support</a>
+                                        <a href="contact-3.html">Contact Us</a>
 
                                     </li>
                                 </ul>
@@ -186,19 +186,18 @@
                                                     <li class="menu-item"><a href="#">Investment Research</a></li>
                                                 </ul>
                                             </li>
+<!--                                            <li class="menu-item menu-item-has-children corzo-normal-menu">-->
+<!--                                                <a href="faq.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>FAQs</a>-->
+<!--                                            </li>-->
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="faq.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>FAQs</a>
-
-                                            </li>
-                                            <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="#" class="sf-with-ul-pre"><span class="corzo-menu-item-description">06</span>Support</a>
+                                                <a href="#" class="sf-with-ul-pre"><span class="corzo-menu-item-description">06</span>Contact Us</a>
 
                                             </li>
                                         </ul>
                                         <div class="corzo-navigation-slide-bar corzo-navigation-slide-bar-style-dot" data-size-offset="0" id="corzo-navigation-slide-bar"></div>
                                     </div>
                                     <div class="corzo-main-menu-right-wrap clearfix">
-                                        <a class="corzo-main-menu-right-button corzo-button-1 corzo-style-round" href="contact-3.html" target="_self">Get Consult</a>
+                                        <a class="corzo-main-menu-right-button corzo-button-1 corzo-style-round" href="contact-3.html" target="_self">Consult</a>
                                     </div>
                                 </div>
                                 <!-- corzo-navigation -->
@@ -309,6 +308,7 @@
                                             </div>
                                         </div>
                                     </div>
+
                                     <div class="gdlr-core-pbf-column gdlr-core-column-15 " data-skin="Service Skin" id="gdlr-core-column-58332">
                                         <div class="gdlr-core-pbf-column-content-margin gdlr-core-js">
                                             <div class="gdlr-core-pbf-background-wrap"></div>
@@ -316,14 +316,17 @@
                                                 <div class="gdlr-core-pbf-element">
                                                     <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr">
                                                         <div class="gdlr-core-title-item-title-wrap">
-                                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title" style="font-size: 20px; font-weight: 300; letter-spacing: 0px; text-transform: none; color: #f7821e;">
+                                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title"
+                                                                style="font-size: 20px; font-weight: 300; letter-spacing: 0px;
+                                                                text-transform: none; color: #f7821e; margin-left: 55px">
                                                                 Quick Links<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span>
                                                             </h3>
                                                         </div>
                                                     </div>
                                                 </div>
                                                 <div class="gdlr-core-pbf-element">
-                                                    <div class="gdlr-core-custom-menu-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-style-2" style="padding-bottom: 15px; font-size: 19px;">
+                                                    <div class="gdlr-core-custom-menu-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-style-2"
+                                                         style="padding-bottom: 15px; font-size: 14px;  margin-left: 55px;">
                                                         <ul id="menu-services" class="menu">
                                                             <li class="menu-item"><a href="asset-management.html">Securities Trading</a></li>
                                                             <li class="menu-item"><a href="merge-acquisition.html">Financings &amp; Capital Markets</a></li>
@@ -335,33 +338,36 @@
                                                     </div>
                                                 </div>
                                                 <div class="gdlr-core-pbf-element">
-                                                    <div class="gdlr-core-divider-item gdlr-core-divider-item-normal gdlr-core-item-pdlr gdlr-core-left-align" style="margin-bottom: 45px;">
+                                                    <div class="gdlr-core-divider-item gdlr-core-divider-item-normal gdlr-core-item-pdlr gdlr-core-left-align"
+                                                         style="margin-bottom: 45px;  margin-left: 55px">
                                                         <div class="gdlr-core-divider-container" style="max-width: 80px;">
                                                             <div class="gdlr-core-divider-line gdlr-core-skin-divider" style="border-color: #f7821e; border-width: 2px;"></div>
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="gdlr-core-pbf-element">
-                                                    <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align">
-                                                        <a
-                                                            class="gdlr-core-button gdlr-core-button-gradient gdlr-core-left-align gdlr-core-button-no-border gdlr-core-button-full-width"
-                                                            href="#"
-                                                            style="
-                                                                font-size: 18px;
-                                                                font-weight: 500;
-                                                                letter-spacing: 0px;
-                                                                color: #f7821e;
-                                                                padding: 15px 35px 15px 35px;
-                                                                text-transform: none;
-                                                                border-radius: 1px;
-                                                                -moz-border-radius: 1px;
-                                                                -webkit-border-radius: 1px;
-                                                                background: #f5f5f5;
-                                                            ">
-                                                            <i class="gdlr-core-pos-left fa fa-file-pdf-o" style="font-size: 16px; color: #f7821e;"></i><span class="gdlr-core-content">Download PDF</span>
-                                                        </a>
-                                                    </div>
-                                                </div>
+
+<!--                                                download pdf element-->
+<!--                                                <div class="gdlr-core-pbf-element">-->
+<!--                                                    <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align">-->
+<!--                                                        <a-->
+<!--                                                            class="gdlr-core-button gdlr-core-button-gradient gdlr-core-left-align gdlr-core-button-no-border gdlr-core-button-full-width"-->
+<!--                                                            href="#"-->
+<!--                                                            style="-->
+<!--                                                                font-size: 18px;-->
+<!--                                                                font-weight: 500;-->
+<!--                                                                letter-spacing: 0px;-->
+<!--                                                                color: #f7821e;-->
+<!--                                                                padding: 15px 35px 15px 35px;-->
+<!--                                                                text-transform: none;-->
+<!--                                                                border-radius: 1px;-->
+<!--                                                                -moz-border-radius: 1px;-->
+<!--                                                                -webkit-border-radius: 1px;-->
+<!--                                                                background: #f5f5f5;-->
+<!--                                                            ">-->
+<!--                                                            <i class="gdlr-core-pos-left fa fa-file-pdf-o" style="font-size: 16px; color: #f7821e;"></i><span class="gdlr-core-content">Download PDF</span>-->
+<!--                                                        </a>-->
+<!--                                                    </div>-->
+<!--                                                </div>-->
                                             </div>
                                         </div>
                                     </div>
