--- a/index.html
+++ b/index.html
@@ -88,12 +88,11 @@
 <!--                            <li class="menu-item menu-item-has-children">-->
 <!--                                <a href="blog-full-both-sidebar-with-frame.html">Research</a>-->
 <!--                            </li>-->
-
+<!--                            <li class="menu-item menu-item-has-children">-->
+<!--                                <a href="faq.html">FAQs</a>-->
+<!--                            </li>-->
                             <li class="menu-item menu-item-has-children">
-                                <a href="faq.html">FAQs</a>
-                            </li>
-                            <li class="menu-item menu-item-has-children">
-                                <a href="contact-3.html">Support</a>
+                                <a href="contact-3.html">Contact Us</a>
                             </li>
                         </ul>
                     </div>
@@ -192,7 +191,7 @@
 
                                     <li class="menu-item menu-item-has-children corzo-normal-menu">
                                         <a href="asset-management.html" class="sf-with-ul-pre">
-                                            <span class="corzo-menu-item-description">03</span>Services</a>
+                                            <span class="corzo-menu-item-description">03</span>Our Services</a>
                                         <ul class="sub-menu">
                                             <li class="menu-item" data-size="60"><a href="asset-management.html">Securities Trading</a></li>
                                             <li class="menu-item" data-size="60"><a href="merge-acquisition.html">Financings &amp; Capital Markets</a></li>
@@ -204,8 +203,7 @@
                                     </li>
 
                                     <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                        <a href="#" class="sf-with-ul-pre">
-                                            <span class="corzo-menu-item-description">04</span>Portals</a>
+                                        <a href="#" class="sf-with-ul-pre"><span class="corzo-menu-item-description">04</span>Portals</a>
                                         <ul class="sub-menu">
                                             <li class="menu-item"><a href="#">Client Center</a></li>
                                             <li class="menu-item"><a href="#">Investment Research</a></li>
@@ -218,11 +216,11 @@
 <!--                                        </a>-->
 <!--                                    </li>-->
 
+<!--                                    <li class="menu-item menu-item-has-children corzo-normal-menu">-->
+<!--                                        <a href="faq.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>FAQs</a>-->
+<!--                                    </li>-->
                                     <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                        <a href="faq.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>FAQs</a>
-                                    </li>
-                                    <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                        <a href="contact-3.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">06</span>Support</a>
+                                        <a href="contact-3.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">06</span>Contact Us</a>
                                     </li>
 
                                 </ul>
@@ -230,8 +228,7 @@
                                      data-size-offset="0" id="corzo-navigation-slide-bar"></div>
                             </div>
                             <div class="corzo-main-menu-right-wrap clearfix">
-                                <a class="corzo-main-menu-right-button corzo-button-1 corzo-style-round"
-                                   href="contact-3.html" target="_self">Get Broker</a>
+                                <a class="corzo-main-menu-right-button corzo-button-1 corzo-style-round" href="contact-3.html" target="_self">Consult</a>
                             </div>
                         </div>
                         <!-- corzo-navigation -->
@@ -682,7 +679,7 @@
                                         <div class="gdlr-core-pbf-element">
                                             <div class="gdlr-core-feature-content-item gdlr-core-item-pdb clearfix gdlr-core-item-pdlr" id="gdlr-core-feature-content-67350">
 <!--                                                Color menus-->
-                                                <div class="gdlr-core-column-20 gdlr-core-column-first">
+                                                <div class="gdlr-core-column-30 gdlr-core-column-first">
                                                     <div class="gdlr-core-feature-content clearfix gdlr-core-left-align" style="border-width: 0px 0px 0px 0px;">
                                                         <div class="gdlr-core-feature-content-thumbnail gdlr-core-media-image">
                                                             <img src="upload/img01-700x870.jpg" alt="" width="700" height="870" title="img01"/>
@@ -701,20 +698,25 @@
                                                                 <div class="gdlr-core-feature-content-content gdlr-core-skin-content"
                                                                      style="font-size: 18px; font-weight: 400; letter-spacing: 0px; text-transform: none; text-align: justify">
                                                                     <p>
-                                                                        The market remains jittery, evidenced by a 2nd straight
-                                                                        under subscription at the weekly money market auction last
-                                                                        week. The Treasury raised ~GHS1.31 billion in the short-term.
+                                                                        **Treasury Bond Market Commentary- 20th October 2022
+                                                                        Marginal liquidity seeped into the markets on Wednesday,
+                                                                        evidenced by an improvement in cumulative FV traded to ~GHS1.04 billion.
+                                                                        Activity was dominated by block trades in the short-end,
+                                                                        mostly Jan-23 (CPN:20.75) which ended the day around 38.17% (+1,408bps d/d).
+
                                                                     </p>
                                                                 </div>
-                                                                <a class="gdlr-core-feature-content-learn-more"
-                                                                   href="asset-management.html"
+                                                                <a class="gdlr-core-feature-content-learn-more" target="_blank"
+                                                                   href="https://1drv.ms/b/s!An8Vbwb8BNZFkKFTjM1803uOVZ00SA?e=GYW59Q"
+                                                                   style="text-transform: none;">Download </a> |
+                                                                <a class="gdlr-core-feature-content-learn-more" href="asset-management.html"
                                                                    style="text-transform: none;">Learn More <i class="ion-ios-arrow-thin-right"></i></a>
                                                             </div>
                                                         </div>
                                                     </div>
                                                 </div>
 
-                                                <div class="gdlr-core-column-20">
+                                                <div class="gdlr-core-column-30">
                                                     <div class="gdlr-core-feature-content clearfix gdlr-core-left-align"
                                                          style="border-width: 0px 0px 0px 0px;">
                                                         <div class="gdlr-core-feature-content-thumbnail gdlr-core-media-image">
@@ -733,14 +735,22 @@
                                                                 <div class="gdlr-core-feature-content-content gdlr-core-skin-content"
                                                                      style="font-size: 18px; font-weight: 400; letter-spacing: 0px; text-transform: none; text-align: justify;">
                                                                     <p>
-                                                                        MTN Ghana gained 7 pesewas during today’s session to end the
-                                                                        day at GHS0.87/share (+8.75% d/d), pushing the benchmark index
-                                                                        up by 3.48%.
+                                                                        GSE-CI Drops Further Today
+                                                                        GOIL was the sole price mover today, shedding 1 pesewa (-0.57%
+                                                                        d/d) to close at GHS1.74/share. Consequently, the GSE benchmark
+                                                                        index dropped to 2,460.31 points (-0.02% d/d), increasing its YTD
+                                                                        loss to 11.80%. The GSE-FSI stayed dormant for the 2nd session
+                                                                        straight, closing at 2,069.89 points and maintaining a YTD loss of
+                                                                        3.81%.
                                                                     </p>
                                                                 </div>
-                                                                <a class="gdlr-core-feature-content-learn-more" href="smart-manufacturing.html" style="text-transform: none;">
-                                                                    Learn More <i class="ion-ios-arrow-thin-right">
-                                                                </i>
+                                                                <a class="gdlr-core-feature-content-learn-more" target="_blank"
+                                                                   href="https://1drv.ms/b/s!An8Vbwb8BNZFkKFUEcHeyzI567qYwg?e=hB8GMd" style="text-transform: none;">
+                                                                    Download
+                                                                </a>
+                                                                |
+                                                                <a class="gdlr-core-feature-content-learn-more" href="asset-management.html" style="text-transform: none;">
+                                                                    Learn More <i class="ion-ios-arrow-thin-right"></i>
                                                                 </a>
                                                             </div>
                                                         </div>
@@ -958,7 +968,8 @@
                     </div>
                 </div>
                 <!--                        end of welcome message-->
-                <br>
+
+
 
                 <!--                main-services-->
                 <div class="gdlr-core-pbf-wrapper" style="padding: 5px 0px 90px 0px;" id="gdlr-core-wrapper-2">
@@ -968,10 +979,10 @@
                                 data-parallax-speed="0.03">
                         </div>
                     </div>
+                    <br><br>
                     <div class="gdlr-core-pbf-wrapper-content gdlr-core-js">
                         <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
-                            <div class="gdlr-core-pbf-column gdlr-core-column-60 gdlr-core-column-first"
-                                 id="gdlr-core-column-46110">
+                            <div class="gdlr-core-pbf-column gdlr-core-column-60 gdlr-core-column-first" id="gdlr-core-column-46110">
                                 <div class="gdlr-core-pbf-column-content-margin gdlr-core-js"
                                      style="margin: 0px 0px 0px -20px; padding: 0px 0px 70px 0px;">
                                     <div class="gdlr-core-pbf-background-wrap"></div>
@@ -1272,7 +1283,6 @@
                                                     <span class="gdlr-core-content">Learn More</span><i
                                                         class="gdlr-core-pos-right ion-ios-arrow-thin-right"
                                                         style="font-size: 31px; color: #f7821e;">
-
                                                 </i>
                                                 </a>
                                             </div>
@@ -1286,7 +1296,7 @@
 
 
                 <!--                news-->
-                <div class="gdlr-core-pbf-wrapper" style="padding: 95px 0px 115px 0px;" id="gdlr-core-wrapper-6">
+                <div class="gdlr-core-pbf-wrapper" style="padding: 8px 0px 115px 0px;" id="gdlr-core-wrapper-6">
                     <div class="gdlr-core-pbf-background-wrap"></div>
                     <div class="gdlr-core-pbf-background-wrap" style="top: 40px;">
                         <!--                        <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"-->
@@ -1312,7 +1322,7 @@
                                                 </div>
 
                                                 <!--                            leadership team-->
-                                                <div class="gdlr-core-pbf-wrapper" style="padding: 100px 0px 40px 0px;">
+                                                <div class="gdlr-core-pbf-wrapper" style="padding: 0px 0px 40px 0px;">
                                                     <div class="gdlr-core-pbf-background-wrap"></div>
                                                     <div class="gdlr-core-pbf-wrapper-content gdlr-core-js">
                                                         <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
@@ -1443,8 +1453,7 @@
                     </div>
                 </div>
 
-
-                <div class="gdlr-core-pbf-wrapper" style="padding: 0px 0px 0px 0px;">
+                <div class="gdlr-core-pbf-wrapper" style="padding: 0px 0px 0px 0px; margin-top: -60px;">
                     <div class="gdlr-core-pbf-background-wrap">
                         <div
                                 class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
