updated market colors

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 
 <body class="home page-template-default page page-id-12613 theme-corzo gdlr-core-body woocommerce-no-js corzo-body corzo-body-front corzo-full corzo-with-sticky-navigation corzo-blockquote-style-3 gdlr-core-link-to-lightbox"
       data-home-url="index.html">
+<!--<div id="preloader">-->
+<!--    <div id="status">-->
+<!--    </div>-->
+<!--</div>-->
 
 <div class="corzo-mobile-header-wrap">
     <div class="corzo-mobile-header corzo-header-background corzo-style-slide corzo-sticky-mobile-navigation"
@@ -78,7 +82,7 @@
                             </li>
 
                             <li class="menu-item menu-item-has-children">
-                                <a href="#">Portals</a>
+                                <a href="blog-grid-2-columns-no-space.html">Portals</a>
                                 <ul class="sub-menu">
                                     <li class="menu-item"><a href="#">Client Center</a></li>
                                     <li class="menu-item"><a href="#">Investment Research</a></li>
@@ -203,7 +207,7 @@
                                     </li>
 
                                     <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                        <a href="#" class="sf-with-ul-pre"><span class="corzo-menu-item-description">04</span>Portals</a>
+                                        <a href="images.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">04</span>Portals</a>
                                         <ul class="sub-menu">
                                             <li class="menu-item"><a href="#">Client Center</a></li>
                                             <li class="menu-item"><a href="#">Investment Research</a></li>
@@ -698,16 +702,15 @@
                                                                 <div class="gdlr-core-feature-content-content gdlr-core-skin-content"
                                                                      style="font-size: 18px; font-weight: 400; letter-spacing: 0px; text-transform: none; text-align: justify">
                                                                     <p>
-                                                                        **Treasury Bond Market Commentary- 20th October 2022
-                                                                        Marginal liquidity seeped into the markets on Wednesday,
-                                                                        evidenced by an improvement in cumulative FV traded to ~GHS1.04 billion.
-                                                                        Activity was dominated by block trades in the short-end,
-                                                                        mostly Jan-23 (CPN:20.75) which ended the day around 38.17% (+1,408bps d/d).
-
+                                                                        **Treasury Bond Market Commentary - 3rd November 2022
+                                                                        The volumes came back into the market yesterday.
+                                                                        Total FV traded increased by 211.87% d/d to ~GHS993.66 billion;
+                                                                        quite extreme volatility we are seeing in the market.
+                                                                        Most trading activity yesterday was seen in the belly of the curve.
                                                                     </p>
                                                                 </div>
                                                                 <a class="gdlr-core-feature-content-learn-more" target="_blank"
-                                                                   href="https://1drv.ms/b/s!An8Vbwb8BNZFkKFTjM1803uOVZ00SA?e=GYW59Q"
+                                                                   href="https://1drv.ms/b/s!An8Vbwb8BNZFkKFYw1FATN5jOooU2Q?e=XnkYHp"
                                                                    style="text-transform: none;">Download </a> |
                                                                 <a class="gdlr-core-feature-content-learn-more" href="asset-management.html"
                                                                    style="text-transform: none;">Learn More <i class="ion-ios-arrow-thin-right"></i></a>
@@ -735,18 +738,18 @@
                                                                 <div class="gdlr-core-feature-content-content gdlr-core-skin-content"
                                                                      style="font-size: 18px; font-weight: 400; letter-spacing: 0px; text-transform: none; text-align: justify;">
                                                                     <p>
-                                                                        GSE-CI Drops Further Today
-                                                                        GOIL was the sole price mover today, shedding 1 pesewa (-0.57%
-                                                                        d/d) to close at GHS1.74/share. Consequently, the GSE benchmark
-                                                                        index dropped to 2,460.31 points (-0.02% d/d), increasing its YTD
-                                                                        loss to 11.80%. The GSE-FSI stayed dormant for the 2nd session
-                                                                        straight, closing at 2,069.89 points and maintaining a YTD loss of
-                                                                        3.81%.
+                                                                        MTN Ghana Loses A Pesewa
+                                                                        The stock price of MTN Ghana shed 1 pesewa (GHS0.87, -1.14%
+                                                                        d/d) dragging the GSE-CI down by 0.48%. The benchmark index
+                                                                        ended the session at 2,448.53 pts extending its YTD loss to 12.22%
+                                                                        but the GSE-FSI remained constant at 2,069.89 pts (YTD: -3.81%).
+                                                                        Separately, NewGold ETF stock price climbed to GHS237.20
+                                                                        (0.89% d/d).
                                                                     </p>
                                                                 </div>
                                                                 <a class="gdlr-core-feature-content-learn-more" target="_blank"
-                                                                   href="https://1drv.ms/b/s!An8Vbwb8BNZFkKFUEcHeyzI567qYwg?e=hB8GMd" style="text-transform: none;">
-                                                                    Download
+                                                                   href="https://1drv.ms/b/s!An8Vbwb8BNZFkKFZ8jHCUWvEt6z_Mw?e=Gxl20t"
+                                                                   style="text-transform: none;"> Download
                                                                 </a>
                                                                 |
                                                                 <a class="gdlr-core-feature-content-learn-more" href="asset-management.html" style="text-transform: none;">
@@ -979,17 +982,18 @@
                                 data-parallax-speed="0.03">
                         </div>
                     </div>
-                    <br><br>
                     <div class="gdlr-core-pbf-wrapper-content gdlr-core-js">
                         <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
                             <div class="gdlr-core-pbf-column gdlr-core-column-60 gdlr-core-column-first" id="gdlr-core-column-46110">
+
                                 <div class="gdlr-core-pbf-column-content-margin gdlr-core-js"
                                      style="margin: 0px 0px 0px -20px; padding: 0px 0px 70px 0px;">
                                     <div class="gdlr-core-pbf-background-wrap"></div>
+
                                     <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js" style="margin-top: -150px;">
                                         <div class="gdlr-core-pbf-element">
                                             <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"
-                                                 style="padding-bottom: 0px;">
+                                                 style="padding-bottom: 0px; padding-top: 24px">
                                                         <span class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption"
                                                                 style="font-size: 14px; font-weight: 500; font-style: normal; letter-spacing: 3px; text-transform: uppercase; color: #f7821e; margin-bottom: 5px;">
                                                             <span class="gdlr-core-title-item-caption-prefix" style="border-color: #f7821e; height: 13px; margin-right: 14px;"></span>
@@ -1642,7 +1646,15 @@
         <script type="text/javascript" src="js/plugins/jquery.mmenu.js"></script>
         <script type="text/javascript" src="js/plugins/jquery.superfish.js"></script>
         <script type="text/javascript" src="js/plugins/script-core.js"></script>
+<!--        <script type="text/javascript" src="js/preload.js"></script>-->
 
+<script    type="text/javascript">
+    $(window).load(function() { // makes sure the whole site is loaded
+        $('#status').fadeOut(); // will first fade out the loading animation
+        $('#preloader').delay(50).fadeOut(100); // will fade out the white DIV that covers the website.
+        $('body').delay(50).css({'overflow':'visible'});
+    })
+</script>
 
         <!-- Rev Slider Plugins Starts Here: -->
 
