--- a/insurance.html
+++ b/insurance.html
@@ -184,10 +184,9 @@
                                                     <li class="menu-item"><a href="#">Investment Research</a></li>
                                                 </ul>
                                             </li>
-                                            <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="contact-3.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>FAQ</a>
-
-                                            </li>
+<!--                                            <li class="menu-item menu-item-has-children corzo-normal-menu">-->
+<!--                                                <a href="contact-3.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>FAQ</a>-->
+<!--                                            </li>-->
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
                                                 <a href="#" class="sf-with-ul-pre"><span class="corzo-menu-item-description">06</span>Support</a>
 
