--- a/contact-3.html
+++ b/contact-3.html
@@ -53,15 +53,11 @@
                             <a class="corzo-mm-menu-button corzo-mobile-menu-button corzo-mobile-button-hamburger" href="#corzo-mobile-menu"><span></span></a>
                             <div class="corzo-mm-menu-wrap corzo-navigation-font" id="corzo-mobile-menu" data-slide="right">
                                 <ul id="menu-main-navigation" class="m-menu">
-                                    <li
-                                        class="menu-item menu-item-home menu-item-has-children"
-                                    >
+                                    <li class="menu-item menu-item-home menu-item-has-children">
                                         <a href="index.html" aria-current="page">Home</a>
-
                                     </li>
                                     <li class="menu-item menu-item-has-children">
                                         <a href="about.html">Corporate Profile</a>
-
                                     </li>
                                     <li class="menu-item menu-item-has-children">
                                         <a href="asset-management.html">Our Services</a>
@@ -75,7 +71,7 @@
                                         </ul>
                                     </li>
                                     <li class="menu-item menu-item-has-children">
-                                        <a href="#">Portals</a>
+                                        <a href="images.html">Portals</a>
                                         <ul class="sub-menu">
                                             <li class="menu-item"><a href="#">Client Center</a></li>
                                             <li class="menu-item"><a href="#">Investment Research</a></li>
@@ -86,7 +82,6 @@
 <!--                                    </li>-->
                                     <li class="menu-item menu-item-has-children">
                                         <a href="contact-3.html">Contact Us</a>
-
                                     </li>
                                 </ul>
                             </div>
@@ -148,15 +143,11 @@
                                 <div class="corzo-navigation corzo-item-pdlr clearfix">
                                     <div class="corzo-main-menu" id="corzo-main-menu">
                                         <ul id="menu-main-navigation-1" class="sf-menu">
-                                            <li
-                                                class="menu-item menu-item-home menu-item-has-children corzo-normal-menu"
-                                            >
+                                            <li class="menu-item menu-item-home menu-item-has-children corzo-normal-menu">
                                                 <a href="index.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">01</span>Home</a>
-
                                             </li>
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
                                                 <a href="about.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">02</span>Corporate Profile</a>
-
                                             </li>
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
                                                 <a href="asset-management.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">03</span>Our Services</a>
@@ -170,7 +161,7 @@
                                                 </ul>
                                             </li>
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="#" class="sf-with-ul-pre">
+                                                <a href="images.html" class="sf-with-ul-pre">
                                                     <span class="corzo-menu-item-description">04</span>Portals</a>
                                                 <ul class="sub-menu">
                                                     <li class="menu-item"><a href="#">Client Center</a></li>
@@ -332,7 +323,10 @@
                                                 <div class="gdlr-core-pbf-element">
                                                     <div class="gdlr-core-wp-google-map-plugin-item gdlr-core-item-pdlr gdlr-core-item-pdb" style="padding-bottom: 0px;">
                                                    
-                                                        <iframe style="width:100%; height:500px; border:0" src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d19905.696399556287!2d-0.3007084089960577!3d51.417531259591925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1s2334+Peterson+Street+Kingston+UK+London+H14D!5e0!3m2!1sen!2s!4v1546697086219" width="600" height="450" ></iframe>
+                                                        <iframe style="width:100%; height:500px; border:0"
+                                                                src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Constant%20Capital%20Ghana+(Constant%20Capital%20Ghana)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
+                                                                width="600" height="450">
+                                                        </iframe>
 
                                                     </div>
                                                 </div>
@@ -348,12 +342,11 @@
                                 <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-pbf-wrapper-full-no-space">
                                     <div class="gdlr-core-pbf-element">
                                         <div class="gdlr-core-social-network-item gdlr-core-item-pdb gdlr-core-center-align gdlr-core-item-pdlr" style="padding-bottom: 0px;">
-                                            <a href="/cdn-cgi/l/email-protection#f9da" target="_blank" class="gdlr-core-social-network-icon" title="email" style="font-size: 20px; color: #232323;"><i class="fa fa-envelope"></i></a>
-                                            <a href="#" target="_blank" class="gdlr-core-social-network-icon" title="facebook" style="font-size: 20px; color: #232323; margin-left: 37px;"><i class="fa fa-facebook"></i></a>
-                                            <a href="#" target="_blank" class="gdlr-core-social-network-icon" title="google-plus" style="font-size: 20px; color: #232323; margin-left: 37px;"><i class="fa fa-google-plus"></i></a>
-                                            <a href="#" target="_blank" class="gdlr-core-social-network-icon" title="linkedin" style="font-size: 20px; color: #232323; margin-left: 37px;"><i class="fa fa-linkedin"></i></a>
-                                            <a href="#" target="_blank" class="gdlr-core-social-network-icon" title="skype" style="font-size: 20px; color: #232323; margin-left: 37px;"><i class="fa fa-skype"></i></a>
-                                            <a href="#" target="_blank" class="gdlr-core-social-network-icon" title="twitter" style="font-size: 20px; color: #232323; margin-left: 37px;"><i class="fa fa-twitter"></i></a>
+                                            <a href="mailto:info@constantcap.com.gh" target="_blank" class="gdlr-core-social-network-icon" title="email" style="font-size: 20px; color: #232323;"><i class="fa fa-envelope"></i></a>
+                                            <a href="https://www.facebook.com/constantcapitalghana" target="_blank" class="gdlr-core-social-network-icon" title="facebook" style="font-size: 20px; color: #232323; margin-left: 37px;"><i class="fa fa-facebook"></i></a>
+                                            <a href="https://gh.linkedin.com/company/constant-capital-ghana-ltd" target="_blank" class="gdlr-core-social-network-icon" title="linkedin" style="font-size: 20px; color: #232323; margin-left: 37px;"><i class="fa fa-linkedin"></i></a>
+                                            <a href="https://www.instagram.com/constantcapitalghana/" target="_blank" class="gdlr-core-social-network-icon" title="instagram" style="font-size: 20px; color: #232323; margin-left: 37px;"><i class="fa fa-instagram"></i></a>
+                                            <a href="https://twitter.com/ConstantCapGH" target="_blank" class="gdlr-core-social-network-icon" title="twitter" style="font-size: 20px; color: #232323; margin-left: 37px;"><i class="fa fa-twitter"></i></a>
                                         </div>
                                     </div>
                                 </div>
