--- a/risk-management.html
+++ b/risk-management.html
@@ -54,11 +54,8 @@
                             <a class="corzo-mm-menu-button corzo-mobile-menu-button corzo-mobile-button-hamburger" href="#corzo-mobile-menu"><span></span></a>
                             <div class="corzo-mm-menu-wrap corzo-navigation-font" id="corzo-mobile-menu" data-slide="right">
                                 <ul id="menu-main-navigation" class="m-menu">
-                                    <li
-                                        class="menu-item menu-item-home menu-item-has-children"
-                                    >
+                                    <li class="menu-item menu-item-home menu-item-has-children">
                                         <a href="index.html" aria-current="page">Home</a>
-
                                     </li>
                                     <li class="menu-item menu-item-has-children">
                                         <a href="about.html">Corporate Profile</a>
@@ -74,6 +71,7 @@
                                             <li class="menu-item"><a href="private-equity-2.html">Private Equity</a></li>
                                         </ul>
                                     </li>
+
                                     <li class="menu-item menu-item-has-children">
                                         <a href="#">Portals</a>
                                         <ul class="sub-menu">
@@ -81,6 +79,7 @@
                                             <li class="menu-item"><a href="#">Investment Research</a></li>
                                         </ul>
                                     </li>
+
 <!--                                    <li class="menu-item menu-item-has-children">-->
 <!--                                        <a href="faq.html">FAQs</a>-->
 <!--                                    </li>-->
